version/0.71/_sources/examples/gallery_examples/00-mapdl-examples/index.rst.txt


.. _sphx_glr_examples_gallery_examples_00-mapdl-examples:

Full examples using PyMAPDL
===========================
These examples demonstrate full examples using the PyMAPDL module.



.. raw:: html

    <div class="sphx-glr-thumbnails">

.. thumbnail-parent-div-open

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This example shows how to gather and plot results with material discontinuities across elements (Power graphics style) versus the default full average results (Full graphics style).">

.. only:: html

  .. image:: /examples/gallery_examples/00-mapdl-examples/images/thumb/sphx_glr_2d_magnetostatic_solenoid-BodyFlux_Averaging_thumb.png
    :alt:

  :ref:`sphx_glr_examples_gallery_examples_00-mapdl-examples_2d_magnetostatic_solenoid-BodyFlux_Averaging.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Analysis of a 2D magnetostatic solenoid</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This tutorial shows how you can use PyMAPDL to determine and verify the &quot;stress concentration factor&quot; when modeling using 2D plane elements and then verify this using 3D elements.">

.. only:: html

  .. image:: /examples/gallery_examples/00-mapdl-examples/images/thumb/sphx_glr_2d_plate_with_a_hole_thumb.png
    :alt:

  :ref:`sphx_glr_examples_gallery_examples_00-mapdl-examples_2d_plate_with_a_hole.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">MAPDL 2D Plane Stress Concentration Analysis</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This example demonstrates how to create a basic pressure vessel and apply a pressure to it.">

.. only:: html

  .. image:: /examples/gallery_examples/00-mapdl-examples/images/thumb/sphx_glr_2d_pressure_vessel_thumb.png
    :alt:

  :ref:`sphx_glr_examples_gallery_examples_00-mapdl-examples_2d_pressure_vessel.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">2D Pressure Vessel</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This tutorial is the 3D corollary to the 2D plane example ref_plane_stress_concentration. However, this example verifies the stress concentration factor K-t when modeling opposite single notches in a finite width thin plate.">

.. only:: html

  .. image:: /examples/gallery_examples/00-mapdl-examples/images/thumb/sphx_glr_3d_notch_thumb.png
    :alt:

  :ref:`sphx_glr_examples_gallery_examples_00-mapdl-examples_3d_notch.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">3D Stress Concentration Analysis for a Notched Plate</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This example demonstrates how you can use MAPDL to create a plate, impose thermal boundary conditions, solve, and plot it all within PyMAPDL.">

.. only:: html

  .. image:: /examples/gallery_examples/00-mapdl-examples/images/thumb/sphx_glr_3d_plate_thermal_thumb.png
    :alt:

  :ref:`sphx_glr_examples_gallery_examples_00-mapdl-examples_3d_plate_thermal.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Basic Thermal Analysis with PyMAPDL</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This example shows how to perform an acoustic analysis using PyMAPDL and FLUID elements.">

.. only:: html

  .. image:: /examples/gallery_examples/00-mapdl-examples/images/thumb/sphx_glr_acoustic_analysis_thumb.png
    :alt:

  :ref:`sphx_glr_examples_gallery_examples_00-mapdl-examples_acoustic_analysis.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">3D Acoustic Analysis</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This example is adapted from Basic DPF-Core Usage Example and it shows how to open a result file in DPF and do some basic postprocessing.">

.. only:: html

  .. image:: /examples/gallery_examples/00-mapdl-examples/images/thumb/sphx_glr_basic_dpf_example_thumb.png
    :alt:

  :ref:`sphx_glr_examples_gallery_examples_00-mapdl-examples_basic_dpf_example.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Basic DPF-Core Usage with PyMAPDL</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This example demonstrates a comprehensive structural analysis of a fully constrained I-beam using PyMAPDL. The script creates a parameterized I-beam model, applies loads, solves for structural response, and generates a detailed engineering report in both Markdown and Microsoft Word formats.">

.. only:: html

  .. image:: /examples/gallery_examples/00-mapdl-examples/images/thumb/sphx_glr_beam_with_report_thumb.png
    :alt:

  :ref:`sphx_glr_examples_gallery_examples_00-mapdl-examples_beam_with_report.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">I-Beam Analysis with Automated Report Generation</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This is an example adapted from a classic Ansys APDL tutorial Static Analysis of a Corner Bracket">

.. only:: html

  .. image:: /examples/gallery_examples/00-mapdl-examples/images/thumb/sphx_glr_bracket_static_thumb.png
    :alt:

  :ref:`sphx_glr_examples_gallery_examples_00-mapdl-examples_bracket_static.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Static analysis of a corner bracket</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This example is a classic double cantilever beam test commonly used to study mode I interfacial delamination of composite plates.">

.. only:: html

  .. image:: /examples/gallery_examples/00-mapdl-examples/images/thumb/sphx_glr_composite_dcb_thumb.png
    :alt:

  :ref:`sphx_glr_examples_gallery_examples_00-mapdl-examples_composite_dcb.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Static simulation of double cantilever beam test via cohesive elements</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This example demonstrates how to create contact elements for general contact.">

.. only:: html

  .. image:: /examples/gallery_examples/00-mapdl-examples/images/thumb/sphx_glr_contact_elements_thumb.png
    :alt:

  :ref:`sphx_glr_examples_gallery_examples_00-mapdl-examples_contact_elements.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Contact Element Example</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This example creates a bladed disc using parametric geometry of a cyclic sector and then runs a modal analysis on that cyclic sector. We then post-process the results using the legacy MAPDL reader and finally generate another cyclic model using our parametric modeler.">

.. only:: html

  .. image:: /examples/gallery_examples/00-mapdl-examples/images/thumb/sphx_glr_cyclic_analysis_thumb.png
    :alt:

  :ref:`sphx_glr_examples_gallery_examples_00-mapdl-examples_cyclic_analysis.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Cyclic Analysis</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Run a static cyclic analysis of an example rotor sector using the imperial unit system at 1000 RPM.">

.. only:: html

  .. image:: /examples/gallery_examples/00-mapdl-examples/images/thumb/sphx_glr_cyclic_static_thumb.png
    :alt:

  :ref:`sphx_glr_examples_gallery_examples_00-mapdl-examples_cyclic_static.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Static Cyclic Analysis</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This example illustrates how to map results from a CFD analysis and perform a Finite Element (FE) analysis.">

.. only:: html

  .. image:: /examples/gallery_examples/00-mapdl-examples/images/thumb/sphx_glr_exhaust_manifold_thermal_stress_thumb.png
    :alt:

  :ref:`sphx_glr_examples_gallery_examples_00-mapdl-examples_exhaust_manifold_thermal_stress.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Thermal-structural analysis of exhaust manifold</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="PyMAPDL can load basic IGES geometry for analysis.">

.. only:: html

  .. image:: /examples/gallery_examples/00-mapdl-examples/images/thumb/sphx_glr_geometry_thumb.png
    :alt:

  :ref:`sphx_glr_examples_gallery_examples_00-mapdl-examples_geometry.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Plotting and Mesh Access</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Basic walk through PyMAPDL capabilities.">

.. only:: html

  .. image:: /examples/gallery_examples/00-mapdl-examples/images/thumb/sphx_glr_lathe_cutter_thumb.png
    :alt:

  :ref:`sphx_glr_examples_gallery_examples_00-mapdl-examples_lathe_cutter.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Structural Analysis of a Lathe Cutter</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This is a simple example that loads an archive file containing a beam and then runs a modal analysis using the simplified modal_analysis method.">

.. only:: html

  .. image:: /examples/gallery_examples/00-mapdl-examples/images/thumb/sphx_glr_mapdl_3d_beam_thumb.png
    :alt:

  :ref:`sphx_glr_examples_gallery_examples_00-mapdl-examples_mapdl_3d_beam.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">MAPDL 3D Beam Example</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This is an example from the book &quot;Finite element analysis using ansys 11.0&quot; by Paletikrishna Chaitanya, Sambanarajesh Kumar, and Datti Srinivas. PHI Learning Pvt. Ltd., 1 Jan 2010.">

.. only:: html

  .. image:: /examples/gallery_examples/00-mapdl-examples/images/thumb/sphx_glr_mapdl_beam_thumb.png
    :alt:

  :ref:`sphx_glr_examples_gallery_examples_00-mapdl-examples_mapdl_beam.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">MAPDL 2D Beam Example</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This example demonstrates how to perform a simple modal analysis and animate its results.">

.. only:: html

  .. image:: /examples/gallery_examples/00-mapdl-examples/images/thumb/sphx_glr_modal_beam_thumb.png
    :alt:

  :ref:`sphx_glr_examples_gallery_examples_00-mapdl-examples_modal_beam.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">MAPDL modal beam analysis example</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This tutorial shows how you can use pyansys and MAPDL to interpolate along a path for stress.  This shows some advanced features of the pyvista module to perform the interpolation.">

.. only:: html

  .. image:: /examples/gallery_examples/00-mapdl-examples/images/thumb/sphx_glr_path_operations_thumb.png
    :alt:

  :ref:`sphx_glr_examples_gallery_examples_00-mapdl-examples_path_operations.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Path Operations within PyMAPDL and MAPDL</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This example demonstrates how to create a basic pressure vessel and apply a pressure to it.">

.. only:: html

  .. image:: /examples/gallery_examples/00-mapdl-examples/images/thumb/sphx_glr_pressure_vessel_thumb.png
    :alt:

  :ref:`sphx_glr_examples_gallery_examples_00-mapdl-examples_pressure_vessel.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Pressure Vessel</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This example demonstrates how to perform a random vibration analysis using PyMAPDL.">

.. only:: html

  .. image:: /examples/gallery_examples/00-mapdl-examples/images/thumb/sphx_glr_psd-vm203_thumb.png
    :alt:

  :ref:`sphx_glr_examples_gallery_examples_00-mapdl-examples_psd-vm203.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Dynamic Load Effect on a Supported Thick Plate</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Run a modal analysis on a mesh generated from pyvista within MAPDL.">

.. only:: html

  .. image:: /examples/gallery_examples/00-mapdl-examples/images/thumb/sphx_glr_pyvista_mesh_thumb.png
    :alt:

  :ref:`sphx_glr_examples_gallery_examples_00-mapdl-examples_pyvista_mesh.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">PyVista Mesh Integration</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="The objective of this test is to demonstrate CFX pressure data mapping to structural 11 blade model in PyMAPDL.">

.. only:: html

  .. image:: /examples/gallery_examples/00-mapdl-examples/images/thumb/sphx_glr_slashmap_cfx_mapping_thumb.png
    :alt:

  :ref:`sphx_glr_examples_gallery_examples_00-mapdl-examples_slashmap_cfx_mapping.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">CFX pressure data mapping to structural blade</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This MAPDL example demonstrates how to model spot welding on three thin sheets of metal. Here, the full input file is simply run using the PyMAPDL interface.">

.. only:: html

  .. image:: /examples/gallery_examples/00-mapdl-examples/images/thumb/sphx_glr_spotweld_thumb.png
    :alt:

  :ref:`sphx_glr_examples_gallery_examples_00-mapdl-examples_spotweld.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Running an input file - spotweld SHELL181 example</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This Ansys PyMAPDL script builds a bar and applies torque to it using SURF154 elements. This is a static analysis example.">

.. only:: html

  .. image:: /examples/gallery_examples/00-mapdl-examples/images/thumb/sphx_glr_torsional_load_thumb.png
    :alt:

  :ref:`sphx_glr_examples_gallery_examples_00-mapdl-examples_torsional_load.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Torsional load on a bar using SURF154 elements</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This example shows how you can use PyMAPDL to input a time dependent temperature table to vary the temperature at a beam. This uses convection loads with independently varying convection coefficient and bulk temperature.">

.. only:: html

  .. image:: /examples/gallery_examples/00-mapdl-examples/images/thumb/sphx_glr_transient_thermal_thumb.png
    :alt:

  :ref:`sphx_glr_examples_gallery_examples_00-mapdl-examples_transient_thermal.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Example Thermal Transient Analysis</div>
    </div>


.. thumbnail-parent-div-close

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /examples/gallery_examples/00-mapdl-examples/2d_magnetostatic_solenoid-BodyFlux_Averaging
   /examples/gallery_examples/00-mapdl-examples/2d_plate_with_a_hole
   /examples/gallery_examples/00-mapdl-examples/2d_pressure_vessel
   /examples/gallery_examples/00-mapdl-examples/3d_notch
   /examples/gallery_examples/00-mapdl-examples/3d_plate_thermal
   /examples/gallery_examples/00-mapdl-examples/acoustic_analysis
   /examples/gallery_examples/00-mapdl-examples/basic_dpf_example
   /examples/gallery_examples/00-mapdl-examples/beam_with_report
   /examples/gallery_examples/00-mapdl-examples/bracket_static
   /examples/gallery_examples/00-mapdl-examples/composite_dcb
   /examples/gallery_examples/00-mapdl-examples/contact_elements
   /examples/gallery_examples/00-mapdl-examples/cyclic_analysis
   /examples/gallery_examples/00-mapdl-examples/cyclic_static
   /examples/gallery_examples/00-mapdl-examples/exhaust_manifold_thermal_stress
   /examples/gallery_examples/00-mapdl-examples/geometry
   /examples/gallery_examples/00-mapdl-examples/lathe_cutter
   /examples/gallery_examples/00-mapdl-examples/mapdl_3d_beam
   /examples/gallery_examples/00-mapdl-examples/mapdl_beam
   /examples/gallery_examples/00-mapdl-examples/modal_beam
   /examples/gallery_examples/00-mapdl-examples/path_operations
   /examples/gallery_examples/00-mapdl-examples/pressure_vessel
   /examples/gallery_examples/00-mapdl-examples/psd-vm203
   /examples/gallery_examples/00-mapdl-examples/pyvista_mesh
   /examples/gallery_examples/00-mapdl-examples/slashmap_cfx_mapping
   /examples/gallery_examples/00-mapdl-examples/spotweld
   /examples/gallery_examples/00-mapdl-examples/torsional_load
   /examples/gallery_examples/00-mapdl-examples/transient_thermal

